--- a/src/ui/app.ejs
+++ b/src/ui/app.ejs
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Simple NFT Dapp</title>
+    <title>Simple Upload Images</title>
     <base href="/" />
   </head>
   <body>
-    <h1>Simple NFT Dapp</h1>
+    <h1>Simple Upload Images</h1>
     <div id="root"></div>
   </body>
 </html>
